[tool.poetry]
name = "tube"
version = "1.0.6"
description = "Gen3 ETL Service"
authors = ["CTDS UChicago <cdis@uchicago.edu>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/uc-cdis/tube"
include = [
  "NOTICE",
]

[tool.poetry.dependencies]
python = ">=3.9.2, <4.0"
cdislogging = "1.1.1"
cryptography = "^44.0.1"
dictionaryutils = ">=3.4.11"
elasticsearch = "7.10.0"
gen3dictionary = ">=2.0.3"
gen3datamodel = ">=3.1.2"
hdfs = "2.7.0"
psycopg2-binary = ">=2.9.10,<3"
psqlgraph = "3.0.1"
pyspark = "3.3.0"
urllib3 = "1.26.18"
requests = "^2.28.1"
setuptools = "65.3.0"
six = "1.16.0"
Werkzeug = "3.0.6"
pyyaml = "^6.0.2"

[tool.poetry.dev-dependencies]
pytest="5.4.3"
pytest-cov="3.0.0"
mock="4.0.3"
moto="1.1.24"
pyspark-stubs="*"

[build-system]
requires = ["setuptools=65.3.0","poetry>=1.1.0"]
build-backend = "poetry.masonry.api"
