[tool.poetry]
name = "tube"
version = "1.8.0"
description = "Gen3 ETL Service"
authors = ["CTDS UChicago <cdis@uchicago.edu>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/uc-cdis/tube"
include = [
  "NOTICE",
]

[tool.poetry.dependencies]
python = ">=3.9.2, <4.0"
cdislogging = "1.1.1"
# cryptography = "^44.0.1"
dictionaryutils = "^3.4.10"
gen3dictionary = "2.0.3"
gen3datamodel = "3.2.3"
hdfs = "2.7.0"
opensearch-py = ">=2.0.0,<3"
psycopg2-binary = ">=2.8.2,<2.9.0"
psqlgraph = "3.0.1"
pyspark = "3.3.0"
urllib3 = ">=2.6.0,<3"
# requests = ">=2.32.4,<3"
setuptools = "65.3.0"
# six = "1.16.0"
# Werkzeug = "3.0.6"
pyyaml = "^6.0.2"
py4j = ">=0.10.9.5"

[tool.poetry.dev-dependencies]
pytest=">=6.0"
pytest-cov="3.0.0"
mock="4.0.3"
pyspark-stubs="*"

[tool.poetry.group.dev.dependencies]
deptry = "0.23.1"

[build-system]
requires = ["setuptools=65.3.0","poetry>=1.1.0"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
markers = ["schema_ibdgc", "schema_jcoin", "schema_midrc", "schema_parent", "ssl"]
